UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Bid_Last_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Name__c</fullName>
        <label>Bid Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Bid Last Activities</relationshipLabel>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_and_Time__c</fullName>
        <label>Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Logged_in_User__c</fullName>
        <label>Logged in User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NDC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NDC Change</label>
        <referenceTo>Phoenix_NDC_Change__c</referenceTo>
        <relationshipLabel>Bid Last Activities</relationshipLabel>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Product_WAC_Pricing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Product WAC Pricing</label>
        <referenceTo>New_Product_WAC_Pricing__c</referenceTo>
        <relationshipLabel>Bid Last Activities</relationshipLabel>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Times_Visited__c</fullName>
        <label>Number of Times Visited</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PHS_Price_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PHS Price Change</label>
        <referenceTo>Phoenix_PHS_Price_Change__c</referenceTo>
        <relationshipLabel>Bid Last Activities</relationshipLabel>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid</fullName>
                </value>
                <value>
                    <fullName>NDC Change</fullName>
                </value>
                <value>
                    <fullName>PHS Price Change</fullName>
                </value>
                <value>
                    <fullName>New Product Wac Pricing</fullName>
                </value>
                <value>
                    <fullName>Wac Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WAC_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WAC Change</label>
        <referenceTo>Phoenix_WAC_Change__c</referenceTo>
        <relationshipLabel>Bid Last Activities</relationshipLabel>
        <relationshipName>Bid_Last_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isCustomerUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCustomerUpdate</label>
        <type>Checkbox</type>
    </fields>
    <label>Bid Last Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Bid__c</columns>
        <columns>Logged_in_User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Ahmed Rifayee</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bid Last Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bid Last Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>